# glusterfs

./: Makefile.am  README  configure.ac  glusterfs.spec.in
api/examples/: glfs-test  glfsxmp.c
api/src/: Makefile.am  generate-interface.sh  glfs-fops.c  glfs-internal.h  glfs-mem-types.h  glfs.c  glfs.h
api/src/java/: GlusterFile.java  GlusterFileInputStream.java  GlusterFileOutputStream.java  GlusterFileSystem.java  glfs-java.c  glfs-java.h  test.java
cli/src/: cli-cmd-volume.c  cli.c  cli3_1-cops.c
contrib/qemu/: config-host.h  qapi-types.h  qmp-commands.h
contrib/qemu/trace/: generated-tracers.h
contrib/uuid/: gen_uuid.c
glusterfsd/src/: glusterfsd-mgmt.c  glusterfsd.c  glusterfsd.h
libglusterfs/src/: common-utils.c  common-utils.h  compat.c  compat.h  defaults.c  dict.c  dict.h  fd.c  fd.h  globals.c  glusterfs.h  inode.c  inode.h  iobuf.c  logging.c  mem-pool.c  statedump.c  syncop.c  syncop.h  syscall.c  trie.c  xlator.c
libglusterfsclient/src/: Makefile.am  libglusterfsclient-async.c  libglusterfsclient-async.h  libglusterfsclient-mem-types.h  libglusterfsclient-resolver.c  libglusterfsclient-sync.c  libglusterfsclient-sync.h  libglusterfsclient-types.h  libglusterfsclient-xlator.c  libglusterfsclient.c  libglusterfsclient.h
rpc/rpc-lib/src/: protocol-common.h  rpc-clnt.c  rpc-transport.c  rpc-transport.h  rpcsvc.c  rpcsvc.h
rpc/rpc-transport/rdma/src/: rdma.c
rpc/rpc-transport/socket/src/: socket.c
rpc/xdr/src/: cli1-xdr.c  cli1-xdr.h  cli1-xdr.x  cli1.c  cli1.h
tests/basic/: pump.t
tests/bugs/: bug-886998.t
xlators/cluster/afr/src/: afr-common.c  afr-dir-write.c  afr-self-heal-common.c  afr-self-heal-data.c  afr-self-heal-entry.c  afr-self-heal-metadata.c  afr-self-heal-name.c  afr-self-heal.h  afr-self-heald.c  pump.c
xlators/cluster/dht/src/: dht-common.c  dht-common.h  dht-helper.c  dht-selfheal.c  dht.c
xlators/cluster/stripe/src/: stripe.c
xlators/debug/: Makefile.am
xlators/debug/pedantic/src/: Makefile.am  pedantic.c
xlators/features/: Makefile.am
xlators/features/file-snapshot/: README.md
xlators/features/file-snapshot/src/: Makefile.am  file-snapshot.c
xlators/features/locks/src/: common.h  entrylk.c  inodelk.c  locks.h  posix.c
xlators/features/marker/utils/syncdaemon/: master.py  resource.py
xlators/features/qemu-block/src/: Makefile.am  bdrv-xlator.c  block-minimal.c  clock-timer.c  qb-coroutines.c  qb-coroutines.h  qemu-block.c  qemu-block.h
xlators/mgmt/glusterd/src/: glusterd-rebalance.c  glusterd-utils.c  glusterd-volgen.c  glusterd.c  glusterd.h  glusterd3_1-mops.c
xlators/mount/fuse/src/: fuse-bridge.c  fuse-bridge.h  fuse-helpers.c
xlators/nfs/server/src/: mount3.c  nfs-common.c  nfs.c  nfs3-helpers.c  nfs3.c  nfs3.h
xlators/performance/io-cache/src/: io-cache.c
xlators/performance/io-threads/src/: io-threads.c  io-threads.h
xlators/performance/md-cache/src/: Makefile.am  md-cache.c
xlators/performance/quick-read/src/: quick-read.c
xlators/performance/read-ahead/src/: page.c  read-ahead.c
xlators/performance/stat-prefetch/src/: stat-prefetch.c
xlators/performance/write-behind/src/: write-behind.c
xlators/protocol/client/src/: client.c  client3_1-fops.c
xlators/protocol/server/src/: server-handshake.c  server-helpers.c  server-resolve.c  server.c  server.h  server3_1-fops.c
xlators/storage/: Makefile.am
xlators/storage/file-snapshot/src/: Makefile.am  file-snapshot-helpers.c  file-snapshot-mem-types.h  file-snapshot.c  file-snapshot.h
xlators/storage/posix/src/: Makefile.am  posix-aio.c  posix-handle.c  posix-handle.h  posix-helpers.c  posix.c  posix.h
xlators/system/posix-acl/src/: Makefile.am  posix-acl-xattr.c  posix-acl-xattr.h  posix-acl.c
